# olira-cli

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLI_DOCUMENTATION.md  CONTRIBUTING.md  PUBLISHING.md  README.md  coverage.xml  install.sh  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
homebrew/: olira.rb
scripts/: check-version.sh  install-dev.sh  lint.sh  pre-pr.sh  test.sh  uv.sh
scripts/e2e/: cli_ingest.config.example.json  cli_ingest_e2e.py
src/olira_cli/: __init__.py  api.py  auth.py  cli.py  credentials.py  ingest.py  validate.py
tests/: __init__.py  test_version.py
