[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olira-cli"
version = "1.0.2"
authors = [
  { name = "Olira AI", email = "dev@olira.ai" },
]
description = "Olira CLI for authentication and MCP client configuration."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["olira", "cli", "mcp", "auth"]
license = "MIT"

dependencies = [
    "httpx>=0.27",
    "InquirerPy>=0.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.5",
    "pytest>=7.4",
    "pytest-cov>=5.0",
]
release = [
    "pyinstaller>=6.0",
]

[project.scripts]
olira = "olira_cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/olira-ai/olira-cli"
"Documentation" = "https://olira.ai/api-docs"
"Bug Reports" = "https://github.com/olira-ai/olira-cli/issues"
"Source" = "https://github.com/olira-ai/olira-cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["olira_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
